# compiler

./: .gitignore  architecture.md  design.md  external-deps.properties.dist  ffi-c.md  platform-abstraction.md  pom.xml  readme.md  refcounting optimizations.md  roadmap.md  toolchain-config.yml  toolchain-config.yml.dist  various_todos.md
.github/workflows/: build-emerge.yaml  build-llvm-linux.yaml  build-llvm-windows.yaml  build.yaml  do-release.yaml  release.yaml
backend-api/: pom.xml
bazel/rules_emerge/: BUILD  MODULE.bazel  binary.bzl  emerge_module.bzl  toolchain.bzl
bazel/rules_emerge/builtin_module/: BUILD
common/: pom.xml
distributable/: configure.sh
docs/: bazel.md  class-destructors.md  dev-env.md  inheritance.md  toolchain-without-bazel.md
frontend/: pom.xml
frontend/src/main/: main.kt
llvm-backend/: README.md  pom.xml
src/: InternalCompilerError.kt  test.kt  textutils.kt
src/ast/: ImportDeclaration.kt
src/compiler/: OnceAction.kt  throwOnCycle.kt  utils.kt
src/compiler/ast/: ASTModule.kt  ASTVisibilityModifier.kt  AssignmentStatement.kt  Bindable.kt  CodeChunk.kt  Declaration.kt  Executable.kt  FunctionDeclaration.kt  FunctionSignature.kt  ImportDeclaration.kt  ModuleDeclaration.kt  ParameterList.kt  ReturnStatement.kt  TypeArgumentBundle.kt  TypeParameterBundle.kt  TypeReference.kt  VariableDeclaration.kt
src/compiler/binding/: BindingResult.kt  BoundAssignmentStatement.kt  BoundCodeChunk.kt  BoundDeclaredFunction.kt  BoundElement.kt  BoundExecutable.kt  BoundFunction.kt  BoundParameterList.kt  BoundReturnStatement.kt  BoundVariable.kt  Function.kt  ObjectMember.kt  SemanticAnaylsisState.kt  SemanticallyAnalyzable.kt  Variable.kt
src/compiler/lexer/: PositionTrackingCodePointIterator.kt  PositionTrackingCodePointTransactionalSequence.kt  classification.kt  lexer.kt  sourceLocation.kt  tokens.kt
src/compiler/matching/: AbstractMatchingResult.kt  Matcher.kt  PredicateMatcher.kt  ResultCertainty.kt  SimpleMatchingResult.kt
src/compiler/parser/: EOIRule.kt  ExpressionPostfix.kt  Rule.kt  RuleMatchingResult.kt  TokenSequence.kt  WhitespaceEaterRule.kt  helpers.kt  reportings.kt
src/compiler/reportings/: AmbiguousInvocationReporting.kt  AssignmentInConditionReporting.kt  ConditionNotBooleanReporting.kt  DuplicateStructMemberReporting.kt  Reporting.kt  (+43 more)
src/kotlinext/: collections.kt
src/lexer/: classification.kt  lexer.kt  sourceLocation.kt  tokens.kt
src/main/: InternalCompilerError.kt  test.kt
src/matching/: AbstractMatchingResult.kt  Matcher.kt  PredicateMatcher.kt  ResultCertainty.kt
src/parser/: TokenSequence.kt  reportings.kt
src/transact/: Position.kt  SourceFileReader.kt  TransactionalSequence.kt
stdlib/: builtin.dt  builtin.em
stdlib/core/: ArithmeticError.em  CastError.em  Pair.em  Weak.em  intrinsic_operators.em  intrinsic_types.em  isnull.em  panic.em  pointers.em  string.em  throwable.em
stdlib/std/: Printable.em  stdio.em  string.em
test/: function.kt  matchers.kt
test/compiler/: ThrowOnCycleTest.kt  UtilsTest.kt
test/kotlinext/: CollectionsTest.kt
toolchain/: pom.xml
tree-sitter/: pom.xml
(+1292 files in other folders)
